Mon Dec 26 09:12:09 GMT 2011  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager_brass.h,
	  tests/harness/backendmanager_chert.h: Remove superfluous "private:"
	  access specifiers.

Sat Dec 24 12:34:19 GMT 2011  Olly Betts <olly@survex.com>

	* HACKING: Recommend installing valgrind, ccache, and eatmydata.

Sat Dec 24 12:28:44 GMT 2011  Olly Betts <olly@survex.com>

	* HACKING: Make it clear "Building from SVN" applies to git too, and
	  mention that git-svn is needed when building from git.

Thu Dec 22 11:18:17 GMT 2011  Olly Betts <olly@survex.com>

	* languages/compiler/generator.c: Initialise variable which can
	  be used uninitialised.

Thu Dec 22 03:14:02 GMT 2011  Olly Betts <olly@survex.com>

	* bin/Makefile.mk: Link $(libxapian_la) after libbrasscheck.la and
	  libchertcheck.la to fix mingw build.  Probably closes ticket#567.

Thu Dec 22 02:45:45 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/query.h: Document that OP_ELITE_SET with non-term
	  subqueries might pick subqueries which don't match anything.
	  Closes ticket#49.

Thu Dec 22 02:37:10 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/query.h: Improve documentation of OP_ELITE_SET.

Wed Dec 21 12:26:00 GMT 2011  Olly Betts <olly@survex.com>

	* api/errorhandler.cc: Rearrange code in ErrorHandler::operator() to
	  be clearer.

Wed Dec 21 11:23:28 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/errorhandler.h: Fix typo: 'APU' -> 'API'.

Wed Dec 21 09:57:32 GMT 2011  Olly Betts <olly@survex.com>

	* api/,backends/brass/brass_postlist.cc,
	  backends/brass/brass_postlist.h,backends/chert/,
	  backends/contiguousalldocspostlist.cc,
	  backends/contiguousalldocspostlist.h,
	  backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_database.h,
	  backends/multi/multi_postlist.cc,backends/multi/multi_postlist.h,
	  backends/remote/,docs/,expand/,include/xapian/,matcher/,
	  net/remoteserver.cc,net/serialise.cc,tests/,weight/bm25weight.cc,